--- a/history-search.html
+++ b/history-search.html
@@ -10,19 +10,19 @@
     <title>HIST 차량관리</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+        </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-    </script>
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+        </script>
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-    </script>
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+        </script>
 
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
@@ -59,7 +59,8 @@
                         <a class="nav-link" href="history-input.html">사용내역 입력</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="history-search.html">사용내역 조회<span class="sr-only">(current)</span></a>
+                        <a class="nav-link active" href="history-search.html">사용내역 조회<span
+                                class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="car-management.html">차량관리</a>
@@ -76,7 +77,7 @@
         <a class="btn btn-primary" href="#" role="button" style="height: 40px; margin-top: 5px;">SEARCH</a>
         </span>
         </span> -->
-<!-- 
+        <!-- 
 
         <div class="d-flex">
             <div class="col-md-11" style="padding-left: 0px;">
@@ -103,7 +104,7 @@
                 <h1>Search</h1>
             </div>
             <div class="p-2 bd-highlight" style="padding-right: 0px;">
-                <button class="btn btn-md btn-primary" type="submit">SEARCH</button>
+                <button id="searchBtn" class="btn btn-md btn-primary" type="submit">SEARCH</button>
             </div>
         </div>
 
@@ -111,17 +112,17 @@
             <div class="form-group col-md-6">
                 <label for="selectCarNum" class="col-form-label">차량선택</label>
                 <select id="selectCarNum" class="form-control">
-                    <option selected>12하1234 (소렌토)</option>
+                    <!-- <option selected>12하1234 (소렌토)</option>
                     <option>56하7890 (아반떼)</option>
-                    <option>...</option>
+                    <option>...</option> -->
                 </select>
             </div>
             <div class="form-group col-md-6">
                 <label for="datepicker" class="col-form-label">사용 일자</label>
                 <div style="display: flex;">
-                    <input type="text" class="datepicker form-control">
+                    <input type="text" class="datepicker form-control" id="fromDt">
                     <span style="margin-top: 5px; font-weight: bold;">&nbsp;&nbsp;~&nbsp;&nbsp;</span>
-                    <input type="text" class="datepicker form-control">
+                    <input type="text" class="datepicker form-control" id="toDt">
                 </div>
             </div>
         </div>
@@ -147,12 +148,9 @@
 
         <h2 style="margin-top: 20px;">Record</h2>
         <div class="table-responsive">
-            <table class="table table-striped table-hover table-bordered table-sm" style="min-width:1200px;"
-            id="table"
-            data-toggle="table"
-            data-sort-class="table-active"
-            data-sortable="true">
-            <!-- data-height="460"
+            <table class="table table-striped table-hover table-bordered table-sm" style="min-width: 1200px;" id="table"
+                data-toggle="table" data-sort-class="table-active" data-sortable="true">
+                <!-- data-height="460"
             data-url="json/data1.json" -->
                 <thead>
                     <tr>
@@ -277,21 +275,162 @@
                         <td></td>
                         <td></td>
                     </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
                 </tbody>
             </table>
         </div>
 
         <p>
+            <nav aria-label="Page navigation">
+                <ul class="pagination justify-content-end">
+                    <li class="page-item disabled">
+                        <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+                    </li>
+                    <li class="page-item"><a class="page-link" href="#">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#">2</a></li>
+                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    <li class="page-item">
+                        <a class="page-link" href="#">Next</a>
+                    </li>
+                </ul>
+            </nav>
+        </p>
+
+        <p>
             <div class="row justify-content-center">
-                <button class="btn btn-md btn-primary" type="submit" style="margin: 5px;">수정</button>
-                <button class="btn btn-md btn-primary" type="submit" style="margin: 5px;">삭제요청</button>
-                <button class="btn btn-md btn-primary" type="submit" style="margin: 5px;">닫기</button>
+                <button id="fix" class="btn btn-md btn-primary" type="submit" style="margin: 5px;">수정</button>
+                <button id="deleteRqt" class="btn btn-md btn-primary" type="submit" style="margin: 5px;">삭제요청</button>
+                <button id="closePage" class="btn btn-md btn-primary" type="submit" style="margin: 5px;">닫기</button>
             </div>
         </p>
 
     </main>
 
     <script src="./js/datepicker.js"></script>
+    <script>
+
+        var getDate = function () {
+            var today = new Date();
+            var dd = today.getDate();
+            var mm = today.getMonth() + 1; //January is 0!
+            var yyyy = today.getFullYear();
+            if (dd < 10) {
+                dd = '0' + dd;
+            }
+
+            if (mm < 10) {
+                mm = '0' + mm;
+            }
+            return mm + '/' + dd + '/' + yyyy;
+        }
+
+        var getDatetime = function () {
+            var today = new Date();
+            var dd = today.getDate();
+            var mm = today.getMonth() + 1; //January is 0!
+            var yyyy = today.getFullYear();
+            if (dd < 10) {
+                dd = '0' + dd;
+            }
+
+            if (mm < 10) {
+                mm = '0' + mm;
+            }
+            return mm + '/' + dd + '/' + yyyy + today.getTime();
+        }
+
+        $(document).ready(function () {
+
+            $('#fromDt').val(getDate());
+            $('#toDt').val(getDate());
+
+            var numbers = [
+                "12 하1234",
+                "12 하122kjhuikhiuhukhiu",
+            ]
+            $.each(numbers, function (val, text) {
+                $('#selectCarNum').append($('<option></option>').val(val).html(text))
+            }); // there was also a ) missing here
+
+        });
+
+        $('#searchBtn').click(function () {
+            alert('검색 버튼');
+        });
+
+        $('#fix').click(function () {
+            alert('수정 버튼');
+        });
+
+        $('#deleteRqt').click(function () {
+            alert('삭제요청 버튼');
+        });
+
+        $('#closePage').click(function () {
+            alert('닫기 버튼');
+        });
+
+    </script>
 
 </body>
+
 </html>
