--- a/car-mng-app/src/index.html
+++ b/car-mng-app/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>CarMngApp</title>
+  <title>HIST 차량관리</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
